--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "impoexpo-monorepo",
-  "version": "0.0.0",
-  "private": true,
-  "workspaces": [
-    "packages/**"
-  ],
-  "scripts": {},
-  "resolutions": {
-    "@react-aria/i18n": "3.10.2",
-    "@react-aria/selection": "3.23.0",
-    "@react-aria/utils": "3.28.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4"
-  }
+	"name": "impoexpo-monorepo",
+	"version": "0.0.0",
+	"private": true,
+	"workspaces": ["packages/**"],
+	"scripts": {},
+	"resolutions": {
+		"@react-aria/i18n": "3.10.2",
+		"@react-aria/selection": "3.23.0",
+		"@react-aria/utils": "3.28.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4"
+	}
 }
