--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "impoexpo-client",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@heroui/react": "^2.7.4",
-    "@heroui/theme": "^2.4.11",
-    "@react-aria/selection": "^3.23.0",
-    "@react-aria/utils": "^3.28.0",
-    "@react-aria/visually-hidden": "3.8.19",
-    "@react-stately/utils": "^3.10.5",
-    "@types/gsi": "^0.0.5",
-    "clsx": "2.1.1",
-    "framer-motion": "11.15.0",
-    "gapi": "^0.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "^7.3.0",
-    "tailwind-variants": "0.3.0",
-    "tailwindcss": "3.4.16",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@iconify/react": "^5.2.0",
-    "@react-types/shared": "3.27.0",
-    "@types/gapi": "^0.0.47",
-    "@types/gapi.auth2": "^0.0.61",
-    "@types/node": "20.5.7",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.38",
-    "typescript": "5.6.3",
-    "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
-  }
+	"name": "impoexpo-client",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@heroui/react": "^2.7.4",
+		"@heroui/theme": "^2.4.11",
+		"@react-aria/selection": "^3.23.0",
+		"@react-aria/utils": "^3.28.0",
+		"@react-aria/visually-hidden": "3.8.19",
+		"@react-stately/utils": "^3.10.5",
+		"clsx": "2.1.1",
+		"framer-motion": "11.15.0",
+		"gapi": "^0.0.3",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-router": "^7.3.0",
+		"tailwind-variants": "0.3.0",
+		"tailwindcss": "3.4.16",
+		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@iconify/react": "^5.2.0",
+		"@react-types/shared": "3.27.0",
+		"@types/gapi": "^0.0.47",
+		"@types/google.accounts": "^0.0.15",
+		"@types/node": "20.5.7",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "10.4.19",
+		"postcss": "8.4.38",
+		"typescript": "5.6.3",
+		"vite": "^5.2.0",
+		"vite-tsconfig-paths": "^4.3.2"
+	}
 }
