--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
 	"name": "impoexpo-monorepo",
 	"version": "0.0.0",
 	"private": true,
-	"workspaces": ["packages/**"],
-	"scripts": {},
+	"workspaces": ["packages/*"],
+	"scripts": {
+		"dev": "concurrently --kill-others \"pnpm run --filter @impoexpo/shared watch\" \"pnpm run --filter @impoexpo/server start-live\" \"pnpm run --filter @impoexpo/client dev\""
+	},
 	"resolutions": {
 		"@react-aria/i18n": "3.10.2",
 		"@react-aria/selection": "3.23.0",
 		"@react-aria/utils": "3.28.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4"
+		"@biomejs/biome": "1.9.4",
+		"concurrently": "^9.1.2"
 	}
 }
