--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -1,16 +1,18 @@
 {
-	"name": "impoexpo-client",
+	"name": "@impoexpo/client",
 	"private": true,
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"analyze-bundle": "pnpm dlx vite-bundle-visualizer"
 	},
 	"dependencies": {
 		"@heroui/react": "^2.7.4",
 		"@heroui/theme": "^2.4.11",
+		"@impoexpo/shared": "workspace:^",
 		"@react-aria/selection": "^3.23.0",
 		"@react-aria/utils": "^3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
@@ -18,11 +20,13 @@
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
+		"idb-keyval": "^6.2.1",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-router": "^7.3.0",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
+		"valibot": "1.0.0-rc.3",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
