--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,6 @@
 packages:
-  - packages/**
+  - 'packages/*'
 onlyBuiltDependencies:
   - '@biomejs/biome'
   - '@heroui/shared-utils'
   - '@swc/core'
-ignoredBuiltDependencies:
-  - esbuild
