wip: selecting google forms

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,2 @@
 packages:
-  - 'packages/*'
-onlyBuiltDependencies:
-  - '@biomejs/biome'
-  - '@heroui/shared-utils'
-  - '@swc/core'
+  - packages/*
