--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -17,6 +17,7 @@
 		"@react-aria/utils": "^3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
 		"@react-stately/utils": "^3.10.5",
+		"@tanstack/react-query": "^5.67.3",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
