remove database stuff

--- a/packages/impoexpo-shared/package.json
+++ b/packages/impoexpo-shared/package.json
@@ -2,7 +2,7 @@
 	"name": "@impoexpo/shared",
 	"version": "1.0.0",
 	"private": true,
-	"main": "dist",
+	"main": "dist/index.js",
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
