--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -3,25 +3,24 @@
 	"version": "1.0.0",
 	"private": true,
 	"main": "dist/index.js",
+	"type": "module",
 	"scripts": {
-		"start-live": "nodemon src/index.ts",
-		"start": "ts-node-dev src/index.ts"
+		"start-live": "tsx watch src/index.ts",
+		"start": "tsx src/index.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@types/better-sqlite3": "^7.6.12",
 		"@types/cors": "^2.8.17",
 		"@types/express": "5.0.0",
 		"@types/node": "22.13.9",
 		"nodemon": "^3.1.9",
 		"pino-pretty": "^13.0.0",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.3",
 		"typescript": "5.8.2"
 	},
 	"dependencies": {
-		"@blackglory/better-sqlite3-migrations": "^0.1.19",
 		"@impoexpo/shared": "workspace:^",
-		"better-sqlite3": "^11.8.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
