--- a/packages/impoexpo-server/tsconfig.json
+++ b/packages/impoexpo-server/tsconfig.json
@@ -1,12 +1,14 @@
 {
 	"compilerOptions": {
 		"target": "ES2020",
-		"module": "commonjs",
+		"module": "ESNext",
+		"moduleResolution": "node",
 		"outDir": "./dist",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"preserveWatchOutput": true
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
