--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -13,6 +13,7 @@
 		"@heroui/react": "^2.7.4",
 		"@heroui/theme": "^2.4.11",
 		"@impoexpo/shared": "workspace:^",
+		"@number-flow/react": "^0.5.7",
 		"@react-aria/selection": "^3.23.0",
 		"@react-aria/utils": "^3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
@@ -27,6 +28,7 @@
 		"react-router": "^7.3.0",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
+		"usehooks-ts": "^3.1.1",
 		"valibot": "1.0.0-rc.3",
 		"zustand": "^5.0.3"
 	},
