change response errors schema + google forms verify endpoints

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,6 @@
 packages:
   - packages/*
-ignoredBuiltDependencies:
-  - esbuild
+onlyBuiltDependencies:
+  - '@biomejs/biome'
+  - '@heroui/shared-utils'
+  - '@swc/core'
