--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -10,11 +10,11 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/apicache": "^1.6.7",
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "5.0.0",
 		"@types/node": "22.13.9",
-		"@types/apicache": "^1.6.7",
 		"nodemon": "^3.1.9",
 		"pino-pretty": "^13.0.0",
 		"ts-node": "^10.9.2",
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@impoexpo/shared": "workspace:^",
 		"apicache": "^1.6.3",
+		"arktype": "^2.1.10",
 		"compression": "^1.8.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
@@ -34,7 +35,6 @@
 		"googleapis": "^146.0.0",
 		"migration-files": "^0.4.3",
 		"pino": "^9.6.0",
-		"pino-http": "^10.4.0",
-		"valibot": "1.0.0-rc.3"
+		"pino-http": "^10.4.0"
 	}
 }
