--- a/packages/impoexpo-shared/package.json
+++ b/packages/impoexpo-shared/package.json
@@ -18,7 +18,8 @@
 		}
 	},
 	"dependencies": {
-		"valibot": "1.0.0-rc.3"
+		"@orama/orama": "^3.1.3",
+		"arktype": "^2.1.10"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.2"
