--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -20,7 +20,6 @@
 		"@react-stately/utils": "^3.10.5",
 		"@tanstack/react-query": "^5.67.3",
 		"@xyflow/react": "^12.4.4",
-		"arktype": "^2.1.10",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
@@ -31,6 +30,7 @@
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
+		"valibot": "^1.0.0",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
