--- a/packages/impoexpo-shared/package.json
+++ b/packages/impoexpo-shared/package.json
@@ -19,7 +19,7 @@
 	},
 	"dependencies": {
 		"@orama/orama": "^3.1.3",
-		"arktype": "^2.1.10"
+		"valibot": "^1.0.0"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.2"
