--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -19,6 +19,7 @@
 		"@react-aria/visually-hidden": "3.8.19",
 		"@react-stately/utils": "^3.10.5",
 		"@tanstack/react-query": "^5.67.3",
+		"@valibot/i18n": "^1.0.0",
 		"@xyflow/react": "^12.4.4",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
