--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@heroui/react": "^2.7.4",
 		"@heroui/theme": "^2.4.11",
+		"@heroui/use-theme": "^2.1.6",
 		"@impoexpo/shared": "workspace:^",
 		"@number-flow/react": "^0.5.7",
 		"@react-aria/selection": "^3.23.0",
