--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -15,6 +15,7 @@
 		"@heroui/use-theme": "^2.1.6",
 		"@impoexpo/shared": "workspace:^",
 		"@number-flow/react": "^0.5.7",
+		"@orama/orama": "^3.1.3",
 		"@react-aria/selection": "^3.23.0",
 		"@react-aria/utils": "^3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
