--- a/packages/impoexpo-client/tsconfig.json
+++ b/packages/impoexpo-client/tsconfig.json
@@ -6,7 +6,8 @@
 		"module": "ESNext",
 		"skipLibCheck": true,
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": ["./src/*"],
+			"@impoexpo/shared/*": ["../impoexpo-shared/src/*"]
 		},
 
 		/* Bundler mode */
