--- a/packages/impoexpo-server/tsconfig.json
+++ b/packages/impoexpo-server/tsconfig.json
@@ -2,13 +2,17 @@
 	"compilerOptions": {
 		"target": "ES2020",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"outDir": "./dist",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"preserveWatchOutput": true
+		"preserveWatchOutput": true,
+		"allowSyntheticDefaultImports": true,
+		"paths": {
+			"@impoexpo/shared/*": ["../impoexpo-shared/src/*"]
+		}
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
