--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -16,6 +16,7 @@
 		"@impoexpo/shared": "workspace:^",
 		"@number-flow/react": "^0.5.7",
 		"@orama/orama": "^3.1.3",
+		"@orama/stemmers": "^3.1.3",
 		"@react-aria/selection": "^3.23.0",
 		"@react-aria/utils": "^3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
