--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -14,6 +14,9 @@
 		"@heroui/theme": "^2.4.11",
 		"@heroui/use-theme": "^2.1.6",
 		"@impoexpo/shared": "workspace:^",
+		"@lingui/core": "^5.3.0",
+		"@lingui/detect-locale": "^5.3.0",
+		"@lingui/react": "^5.3.0",
 		"@number-flow/react": "^0.5.7",
 		"@orama/orama": "^3.1.3",
 		"@orama/stemmers": "^3.1.3",
@@ -40,13 +43,16 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@iconify/react": "^5.2.0",
+		"@lingui/cli": "^5.3.0",
+		"@lingui/swc-plugin": "^5.5.1",
+		"@lingui/vite-plugin": "^5.3.0",
 		"@react-types/shared": "3.27.0",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.15",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@vitejs/plugin-react": "^4.2.1",
+		"@vitejs/plugin-react-swc": "^3.8.1",
 		"autoprefixer": "10.4.19",
 		"postcss": "8.4.38",
 		"typescript": "5.6.3",
