--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"analyze-bundle": "pnpm dlx vite-bundle-visualizer"
+		"analyze-bundle": "pnpm dlx vite-bundle-visualizer",
+		"lint": "npx biome check"
 	},
 	"dependencies": {
 		"@heroui/react": "^2.7.4",
