--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -11,30 +11,30 @@
 		"lint": "biome check"
 	},
 	"dependencies": {
-		"@heroui/react": "^2.7.4",
-		"@heroui/theme": "^2.4.11",
+		"@heroui/react": "^2.7.5",
+		"@heroui/theme": "^2.4.12",
 		"@heroui/use-theme": "^2.1.6",
 		"@impoexpo/shared": "workspace:^",
 		"@lingui/core": "^5.3.0",
 		"@lingui/detect-locale": "^5.3.0",
 		"@lingui/react": "^5.3.0",
-		"@number-flow/react": "^0.5.7",
-		"@orama/orama": "^3.1.3",
-		"@orama/stemmers": "^3.1.3",
-		"@react-aria/selection": "^3.23.0",
-		"@react-aria/utils": "^3.28.0",
+		"@number-flow/react": "^0.5.8",
+		"@orama/orama": "^3.1.4",
+		"@orama/stemmers": "^3.1.4",
+		"@react-aria/selection": "3.23.0",
+		"@react-aria/utils": "3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
 		"@react-stately/utils": "^3.10.5",
-		"@tanstack/react-query": "^5.67.3",
+		"@tanstack/react-query": "^5.71.10",
 		"@valibot/i18n": "^1.0.0",
-		"@xyflow/react": "^12.4.4",
+		"@xyflow/react": "^12.5.4",
 		"clsx": "2.1.1",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.1",
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
-		"react-router": "^7.3.0",
+		"react-router": "^7.5.0",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
@@ -43,7 +43,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@iconify/react": "^5.2.0",
+		"@iconify/react": "^5.2.1",
 		"@lingui/cli": "^5.3.0",
 		"@lingui/swc-plugin": "^5.5.1",
 		"@lingui/vite-plugin": "^5.3.0",
@@ -57,7 +57,7 @@
 		"autoprefixer": "10.4.19",
 		"postcss": "8.4.38",
 		"typescript": "5.6.3",
-		"vite": "^5.2.0",
+		"vite": "^5.4.17",
 		"vite-tsconfig-paths": "^4.3.2"
 	}
 }
