--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -28,6 +28,8 @@
 		"@tanstack/react-query": "^5.71.10",
 		"@valibot/i18n": "^1.0.0",
 		"@xyflow/react": "^12.5.4",
+		"clsx": "2.1.1",
+		"deep-copy-ts": "^0.5.4",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.1",
@@ -38,8 +40,7 @@
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
 		"valibot": "^1.0.0",
-		"zustand": "^5.0.3",
-		"clsx": "2.1.1"
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
