try to implement undo/redo (failed)

--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -11,28 +11,30 @@
 		"lint": "biome check"
 	},
 	"dependencies": {
-		"@heroui/react": "^2.7.5",
-		"@heroui/theme": "^2.4.12",
+		"@heroui/react": "^2.7.6",
+		"@heroui/theme": "^2.4.13",
 		"@heroui/use-theme": "^2.1.6",
 		"@impoexpo/shared": "workspace:^",
-		"@lingui/core": "^5.3.0",
-		"@lingui/detect-locale": "^5.3.0",
-		"@lingui/react": "^5.3.0",
-		"@number-flow/react": "^0.5.8",
-		"@orama/orama": "^3.1.4",
-		"@orama/stemmers": "^3.1.4",
+		"@lingui/core": "^5.3.1",
+		"@lingui/detect-locale": "^5.3.1",
+		"@lingui/react": "^5.3.1",
+		"@number-flow/react": "^0.5.9",
+		"@orama/orama": "^3.1.6",
+		"@orama/stemmers": "^3.1.6",
 		"@react-aria/selection": "3.23.0",
 		"@react-aria/utils": "3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
-		"@react-stately/utils": "^3.10.5",
-		"@tanstack/react-query": "^5.71.10",
+		"@react-stately/utils": "^3.10.6",
+		"@tanstack/react-query": "^5.74.3",
 		"@valibot/i18n": "^1.0.0",
-		"@xyflow/react": "^12.5.4",
+		"@xyflow/react": "^12.5.6",
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
+		"fast-equals": "^5.2.2",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.1",
+		"immer": "^10.1.1",
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
 		"react-router": "^7.5.0",
@@ -40,25 +42,26 @@
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
 		"valibot": "^1.0.0",
+		"zundo": "^2.3.0",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@iconify/react": "^5.2.1",
-		"@lingui/cli": "^5.3.0",
-		"@lingui/swc-plugin": "^5.5.1",
-		"@lingui/vite-plugin": "^5.3.0",
+		"@lingui/cli": "^5.3.1",
+		"@lingui/swc-plugin": "^5.5.2",
+		"@lingui/vite-plugin": "^5.3.1",
 		"@react-types/shared": "3.27.0",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.15",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@vitejs/plugin-react-swc": "^3.8.1",
+		"@vitejs/plugin-react-swc": "^3.9.0",
 		"autoprefixer": "10.4.19",
 		"postcss": "8.4.38",
 		"typescript": "5.6.3",
-		"vite": "^5.4.17",
+		"vite": "^5.4.18",
 		"vite-tsconfig-paths": "^4.3.2"
 	}
 }
