--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -19,6 +19,7 @@
 		"@lingui/detect-locale": "^5.3.1",
 		"@lingui/react": "^5.3.1",
 		"@number-flow/react": "^0.5.9",
+		"@opentf/obj-diff": "^0.12.0",
 		"@orama/orama": "^3.1.6",
 		"@orama/stemmers": "^3.1.6",
 		"@react-aria/selection": "3.23.0",
@@ -34,9 +35,9 @@
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.1",
-		"immer": "^10.1.1",
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
+		"react-hotkeys-hook": "^5.0.1",
 		"react-router": "^7.5.0",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
