--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -31,7 +31,9 @@
 		"@xyflow/react": "^12.5.6",
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
+		"dexie": "^4.0.11",
 		"fast-equals": "^5.2.2",
+		"fflate": "^0.8.2",
 		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.1",
