--- a/packages/impoexpo-client/tsconfig.json
+++ b/packages/impoexpo-client/tsconfig.json
@@ -24,6 +24,6 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src"],
+	"include": ["src", "../impoexpo-shared/src/nodes/schema-from-string.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
