--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -36,6 +36,7 @@
 		"migration-files": "^0.4.3",
 		"pino": "^9.6.0",
 		"pino-http": "^10.4.0",
+		"uuid": "^11.1.0",
 		"valibot": "^1.0.0"
 	}
 }
