--- a/packages/impoexpo-server/tsconfig.json
+++ b/packages/impoexpo-server/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "ES2020",
 		"module": "ESNext",
-		"lib": ["ESNext.Array"],
+		"lib": ["ESNext.Array", "ES2021.String"],
 		"moduleResolution": "bundler",
 		"outDir": "./dist",
 		"strict": true,
