--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -37,6 +37,7 @@
 		"migration-files": "^0.4.3",
 		"pino": "^9.6.0",
 		"pino-http": "^10.4.0",
+		"pino-http-print": "^3.1.0",
 		"uuid": "^11.1.0",
 		"valibot": "^1.0.0"
 	}
