--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"workspaces": ["packages/*"],
 	"scripts": {
 		"dev": "concurrently --kill-others --handle-input \"pnpm run --filter @impoexpo/server start-live\" \"pnpm run --filter @impoexpo/client dev\"",
+		"preview": "pnpm run --filter @impoexpo/client build && concurrently --kill-others --handle-input \"pnpm run --filter @impoexpo/server start\" \"pnpm run --filter @impoexpo/client preview\"",
 		"update-git-hooks": "pnpm lefthook install",
 		"init": "pnpm install && pnpm run update-git-hooks",
 		"format": "biome format . --write --config-path ./packages/impoexpo-shared/biome.json"
