--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -27,19 +27,20 @@
 		"@react-aria/utils": "3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
 		"@react-stately/utils": "^3.10.6",
-		"@tanstack/react-query": "^5.75.7",
+		"@tanstack/react-query": "^5.76.0",
 		"@valibot/i18n": "^1.0.0",
-		"@xyflow/react": "^12.6.0",
+		"@xyflow/react": "^12.6.1",
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
 		"dexie": "^4.0.11",
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
-		"framer-motion": "11.15.0",
 		"gapi": "^0.0.3",
 		"idb-keyval": "^6.2.2",
+		"motion": "^12.11.0",
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
+		"react-dropzone": "^14.3.8",
 		"react-hotkeys-hook": "^5.0.1",
 		"react-router": "^7.6.0",
 		"tailwind-variants": "0.3.0",
