--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -14,6 +14,7 @@
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.18",
 		"@types/express": "5.0.0",
+		"@types/multer": "^1.4.12",
 		"@types/node": "22.13.9",
 		"nodemon": "^3.1.10",
 		"pino-pretty": "^13.0.0",
@@ -33,9 +34,11 @@
 		"express-rate-limit": "^7.5.0",
 		"express-validator": "^7.2.1",
 		"extra-promise": "^7.0.0",
+		"fast-xml-parser": "^5.2.3",
 		"glob": "^11.0.2",
 		"googleapis": "^146.0.0",
 		"migration-files": "^0.4.3",
+		"multer": "1.4.5-lts.2",
 		"pino": "^9.6.0",
 		"pino-http": "^10.4.0",
 		"pino-http-print": "^3.1.0",
