--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -29,6 +29,7 @@
 		"better-sse": "^0.14.1",
 		"compression": "^1.8.0",
 		"cors": "^2.8.5",
+		"docx": "^9.5.0",
 		"dotenv": "^16.5.0",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
