--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -46,6 +46,7 @@
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
+		"uuid": "^11.1.0",
 		"valibot": "^1.1.0",
 		"zundo": "^2.3.0",
 		"zustand": "^5.0.4"
