--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -36,6 +36,7 @@
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
+		"hash-wasm": "^4.12.0",
 		"idb-keyval": "^6.2.2",
 		"motion": "^12.11.0",
 		"react": "18.3.0",
