--- a/packages/impoexpo-server/.env.template
+++ b/packages/impoexpo-server/.env.template
@@ -1,5 +1,7 @@
 PORT=
 VERBOSE_NODE_EXECUTOR=
+IN_MEMORY_PROJECT_OUTPUTS_MAX=
+IN_MEMORY_PROJECT_OUTPUTS_TTL=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
