--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"workspaces": ["packages/*"],
 	"scripts": {
-		"dev": "concurrently --kill-others --handle-input \"pnpm run --filter @impoexpo/server start-live\" \"pnpm run --filter @impoexpo/client dev\"",
+		"dev": "concurrently --kill-others --raw --handle-input --names server,client \"pnpm run --filter @impoexpo/server start-live\" \"pnpm run --filter @impoexpo/client dev\"",
 		"preview": "pnpm run --filter @impoexpo/client build && concurrently --kill-others --handle-input \"pnpm run --filter @impoexpo/server start\" \"pnpm run --filter @impoexpo/client preview\"",
 		"update-git-hooks": "pnpm lefthook install",
 		"init": "pnpm install && pnpm run update-git-hooks",
