--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -39,6 +39,8 @@
 		"gapi": "^0.0.3",
 		"hash-wasm": "^4.12.0",
 		"idb-keyval": "^6.2.2",
+		"iso-639-1": "^3.1.5",
+		"luxon": "^3.6.1",
 		"motion": "^12.11.0",
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
@@ -62,6 +64,7 @@
 		"@react-types/shared": "3.27.0",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.15",
+		"@types/luxon": "^3.6.2",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
