--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -15,6 +15,7 @@
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.18",
 		"@types/express": "5.0.0",
+		"@types/luxon": "^3.6.2",
 		"@types/multer": "^1.4.12",
 		"@types/node": "22.13.9",
 		"nodemon": "^3.1.10",
@@ -40,6 +41,8 @@
 		"fast-xml-parser": "^5.2.3",
 		"glob": "^11.0.2",
 		"googleapis": "^146.0.0",
+		"iso-639-1": "^3.1.5",
+		"luxon": "^3.6.1",
 		"migration-files": "^0.4.3",
 		"multer": "1.4.5-lts.2",
 		"pino": "^9.6.0",
