--- a/packages/impoexpo-shared/package.json
+++ b/packages/impoexpo-shared/package.json
@@ -6,9 +6,12 @@
 	"type": "module",
 	"scripts": {},
 	"dependencies": {
+		"iso-639-1": "^3.1.5",
+		"luxon": "^3.6.1",
 		"valibot": "^1.1.0"
 	},
 	"devDependencies": {
+		"@types/luxon": "^3.6.2",
 		"typescript": "^5.8.3"
 	}
 }
