--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -38,6 +38,7 @@
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
 		"hash-wasm": "^4.12.0",
+		"html-to-image": "^1.11.13",
 		"idb-keyval": "^6.2.2",
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
