--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -48,6 +48,7 @@
 		"pino": "^9.6.0",
 		"pino-http": "^10.4.0",
 		"pino-http-print": "^3.1.0",
+		"pino-roll": "^3.1.0",
 		"uuid": "^11.1.0",
 		"valibot": "^1.1.0"
 	}
