--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -48,6 +48,7 @@
 		"react-dropzone": "^14.3.8",
 		"react-hotkeys-hook": "^5.0.1",
 		"react-router": "^7.6.0",
+		"react-scan": "^0.3.4",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
 		"usehooks-ts": "^3.1.1",
