--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -11,25 +11,26 @@
 		"lint": "biome check"
 	},
 	"dependencies": {
-		"@dagrejs/dagre": "^1.1.4",
-		"@heroui/react": "^2.7.8",
-		"@heroui/theme": "^2.4.15",
-		"@heroui/use-theme": "^2.1.8",
+		"@dagrejs/dagre": "^1.1.5",
+		"@heroui/react": "^2.7.11",
+		"@heroui/theme": "^2.4.17",
+		"@heroui/use-theme": "^2.1.9",
 		"@impoexpo/shared": "workspace:^",
-		"@lingui/core": "^5.3.1",
-		"@lingui/detect-locale": "^5.3.1",
-		"@lingui/react": "^5.3.1",
-		"@number-flow/react": "^0.5.9",
+		"@internationalized/date": "^3.8.2",
+		"@lingui/core": "^5.3.2",
+		"@lingui/detect-locale": "^5.3.2",
+		"@lingui/react": "^5.3.2",
+		"@number-flow/react": "^0.5.10",
 		"@opentf/obj-diff": "^0.12.0",
-		"@orama/orama": "^3.1.6",
-		"@orama/stemmers": "^3.1.6",
+		"@orama/orama": "^3.1.7",
+		"@orama/stemmers": "^3.1.7",
 		"@react-aria/selection": "3.23.0",
 		"@react-aria/utils": "3.28.0",
 		"@react-aria/visually-hidden": "3.8.19",
-		"@react-stately/utils": "^3.10.6",
-		"@tanstack/react-query": "^5.76.0",
+		"@react-stately/utils": "^3.10.7",
+		"@tanstack/react-query": "^5.81.2",
 		"@valibot/i18n": "^1.0.0",
-		"@xyflow/react": "^12.6.1",
+		"@xyflow/react": "^12.7.1",
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
 		"dexie": "^4.0.11",
@@ -41,13 +42,13 @@
 		"idb-keyval": "^6.2.2",
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
-		"motion": "^12.11.0",
+		"motion": "^12.19.1",
 		"react": "18.3.0",
-		"react-confetti-boom": "^2.0.0",
+		"react-confetti-boom": "^2.0.1",
 		"react-dom": "18.3.0",
 		"react-dropzone": "^14.3.8",
-		"react-hotkeys-hook": "^5.0.1",
-		"react-router": "^7.6.0",
+		"react-hotkeys-hook": "^5.1.0",
+		"react-router": "^7.6.2",
 		"react-scan": "^0.3.4",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
@@ -60,9 +61,9 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@iconify/react": "^5.2.1",
-		"@lingui/cli": "^5.3.1",
+		"@lingui/cli": "^5.3.2",
 		"@lingui/swc-plugin": "^5.5.2",
-		"@lingui/vite-plugin": "^5.3.1",
+		"@lingui/vite-plugin": "^5.3.2",
 		"@react-types/shared": "3.29.0",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.15",
@@ -70,7 +71,7 @@
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
-		"@vitejs/plugin-react-swc": "^3.9.0",
+		"@vitejs/plugin-react-swc": "^3.10.2",
 		"autoprefixer": "10.4.19",
 		"postcss": "8.4.38",
 		"typescript": "5.6.3",
