--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -14,6 +14,7 @@
 		"@dagrejs/dagre": "^1.1.5",
 		"@heroui/react": "^2.7.11",
 		"@heroui/theme": "^2.4.17",
+		"@heroui/toast": "^2.0.12",
 		"@heroui/use-theme": "^2.1.9",
 		"@impoexpo/shared": "workspace:^",
 		"@internationalized/date": "^3.8.2",
