--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -35,11 +35,13 @@
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
 		"dexie": "^4.0.11",
+		"dottie": "^2.0.6",
 		"enhanced-ms": "^4.1.0",
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
 		"hash-wasm": "^4.12.0",
+		"html-to-image": "^1.11.13",
 		"idb-keyval": "^6.2.2",
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
@@ -66,6 +68,7 @@
 		"@lingui/swc-plugin": "^5.5.2",
 		"@lingui/vite-plugin": "^5.3.2",
 		"@react-types/shared": "3.29.0",
+		"@types/dottie": "^2.0.7",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.15",
 		"@types/luxon": "^3.6.2",
