--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -46,6 +46,7 @@
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
 		"motion": "^12.19.1",
+		"pretty-bytes": "^7.0.1",
 		"react": "18.3.0",
 		"react-confetti-boom": "^2.0.1",
 		"react-dom": "18.3.0",
@@ -55,6 +56,7 @@
 		"react-scan": "^0.3.4",
 		"tailwind-variants": "0.3.0",
 		"tailwindcss": "3.4.16",
+		"use-sound": "^5.0.0",
 		"usehooks-ts": "^3.1.1",
 		"uuid": "^11.1.0",
 		"valibot": "^1.1.0",
