--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@impoexpo/client",
 	"private": true,
-	"version": "1.0.0-dev",
+	"version": "1.0.0-beta",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
