--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@impoexpo/server",
-	"version": "1.0.0",
+	"version": "1.0.0-beta",
 	"private": true,
 	"main": "dist/index.js",
 	"type": "module",
