--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
 		"@biomejs/biome": "1.9.4",
 		"concurrently": "^9.1.2",
 		"lefthook": "^1.11.13"
+	},
+	"pnpm": {
+		"overrides": {
+			"@react-aria/utils": "^3.30.1"
+		},
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"@heroui/shared-utils",
+			"@swc/core",
+			"@tailwindcss/oxide",
+			"esbuild",
+			"lefthook"
+		]
 	}
 }
