--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -74,6 +74,7 @@
 		"@lingui/swc-plugin": "^5.6.1",
 		"@lingui/vite-plugin": "^5.5.0",
 		"@react-types/shared": "3.32.0",
+		"@types/cookie-parser": "^1.4.9",
 		"@types/dottie": "^2.0.7",
 		"@types/gapi": "^0.0.47",
 		"@types/google.accounts": "^0.0.18",
@@ -82,6 +83,7 @@
 		"@types/react": "19.1.13",
 		"@types/react-dom": "19.1.9",
 		"@vitejs/plugin-react-swc": "^4.0.1",
+		"cookie": "^1.0.2",
 		"typescript": "5.9.2",
 		"vite": "^7.1.5",
 		"vite-tsconfig-paths": "^5.1.4"
