--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@dagrejs/dagre": "^1.1.5",
+		"@gsap/react": "^2.1.2",
 		"@heroui/react": "^2.8.4",
 		"@heroui/theme": "^2.4.22",
 		"@heroui/toast": "^2.0.16",
@@ -42,6 +43,7 @@
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
+		"gsap": "^3.13.0",
 		"hash-wasm": "^4.12.0",
 		"html-to-image": "^1.11.13",
 		"idb-keyval": "^6.2.2",
