--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -1,87 +1,93 @@
 {
 	"name": "@impoexpo/client",
 	"private": true,
-	"version": "1.0.2-beta",
+	"version": "1.1.0-beta",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
+		"dev": "vike dev --port 5173",
+		"build": "vike build",
+		"preview": "vike preview",
 		"analyze-bundle": "pnpm dlx vite-bundle-visualizer",
 		"lint": "biome check"
 	},
 	"dependencies": {
 		"@dagrejs/dagre": "^1.1.5",
-		"@heroui/react": "^2.7.11",
-		"@heroui/theme": "^2.4.17",
-		"@heroui/toast": "^2.0.12",
-		"@heroui/use-theme": "^2.1.9",
+		"@gsap/react": "^2.1.2",
+		"@heroui/react": "^2.8.4",
+		"@heroui/theme": "^2.4.22",
+		"@heroui/toast": "^2.0.16",
+		"@heroui/use-theme": "^2.1.10",
 		"@impoexpo/shared": "workspace:^",
-		"@internationalized/date": "^3.8.2",
-		"@lingui/core": "^5.3.2",
-		"@lingui/detect-locale": "^5.3.2",
-		"@lingui/react": "^5.3.2",
+		"@internationalized/date": "^3.9.0",
+		"@lingui/core": "^5.5.0",
+		"@lingui/detect-locale": "^5.5.0",
+		"@lingui/react": "^5.5.0",
 		"@number-flow/react": "^0.5.10",
 		"@opentf/obj-diff": "^0.12.0",
-		"@orama/orama": "^3.1.7",
-		"@orama/stemmers": "^3.1.7",
-		"@react-aria/selection": "3.23.0",
-		"@react-aria/utils": "3.28.0",
-		"@react-aria/visually-hidden": "3.8.19",
-		"@react-stately/utils": "^3.10.7",
-		"@tanstack/react-query": "^5.81.2",
+		"@orama/orama": "^3.1.14",
+		"@orama/stemmers": "^3.1.14",
+		"@react-aria/i18n": "^3.12.12",
+		"@react-aria/selection": "3.25.1",
+		"@react-aria/utils": "3.30.1",
+		"@react-aria/visually-hidden": "3.8.27",
+		"@react-stately/utils": "^3.10.8",
+		"@tailwindcss/vite": "^4.1.13",
+		"@tanstack/react-query": "^5.89.0",
 		"@valibot/i18n": "^1.0.0",
-		"@xyflow/react": "^12.7.1",
+		"@xyflow/react": "^12.8.4",
 		"clsx": "2.1.1",
 		"deep-copy-ts": "^0.5.4",
-		"dexie": "^4.0.11",
+		"dexie": "^4.2.0",
 		"dottie": "^2.0.6",
 		"enhanced-ms": "^4.1.0",
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
+		"gsap": "^3.13.0",
 		"hash-wasm": "^4.12.0",
 		"html-to-image": "^1.11.13",
 		"idb-keyval": "^6.2.2",
+		"immer": "^10.1.3",
 		"iso-639-1": "^3.1.5",
-		"luxon": "^3.6.1",
-		"motion": "^12.19.1",
+		"luxon": "^3.7.2",
+		"motion": "^12.23.13",
 		"pretty-bytes": "^7.0.1",
-		"react": "18.3.0",
+		"react": "19.1.1",
 		"react-confetti-boom": "^2.0.1",
-		"react-dom": "18.3.0",
+		"react-dom": "19.1.1",
 		"react-dropzone": "^14.3.8",
 		"react-hotkeys-hook": "^5.1.0",
-		"react-router": "^7.6.2",
-		"react-scan": "^0.3.4",
-		"tailwind-variants": "0.3.0",
-		"tailwindcss": "3.4.16",
+		"react-scan": "^0.4.3",
+		"tailwind-variants": "3.1.1",
+		"tailwindcss": "4.1.13",
 		"use-sound": "^5.0.0",
 		"usehooks-ts": "^3.1.1",
-		"uuid": "^11.1.0",
+		"uuid": "^13.0.0",
 		"valibot": "^1.1.0",
+		"vike": "^0.4.240",
+		"vike-react": "^0.6.5",
 		"zundo": "^2.3.0",
-		"zustand": "^5.0.4"
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@iconify/react": "^5.2.1",
-		"@lingui/cli": "^5.3.2",
-		"@lingui/swc-plugin": "^5.5.2",
-		"@lingui/vite-plugin": "^5.3.2",
-		"@react-types/shared": "3.29.0",
+		"@biomejs/biome": "2.2.4",
+		"@iconify/react": "^6.0.2",
+		"@lingui/cli": "^5.5.0",
+		"@lingui/swc-plugin": "^5.6.1",
+		"@lingui/vite-plugin": "^5.5.0",
+		"@react-types/shared": "3.32.0",
+		"@types/cookie-parser": "^1.4.9",
 		"@types/dottie": "^2.0.7",
 		"@types/gapi": "^0.0.47",
-		"@types/google.accounts": "^0.0.15",
-		"@types/luxon": "^3.6.2",
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@vitejs/plugin-react-swc": "^3.10.2",
-		"autoprefixer": "10.4.19",
-		"postcss": "8.4.38",
-		"typescript": "5.6.3",
-		"vite": "^5.4.19",
-		"vite-tsconfig-paths": "^4.3.2"
+		"@types/google.accounts": "^0.0.18",
+		"@types/luxon": "^3.7.1",
+		"@types/node": "24.5.0",
+		"@types/react": "19.1.13",
+		"@types/react-dom": "19.1.9",
+		"@vitejs/plugin-react-swc": "^4.0.1",
+		"cookie": "^1.0.2",
+		"typescript": "5.9.2",
+		"vite": "^7.1.5",
+		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
