--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -7,7 +7,6 @@
 		"dev": "vike dev --port 5173",
 		"build": "vike build",
 		"preview": "vike preview",
-		"analyze-bundle": "pnpm dlx vite-bundle-visualizer",
 		"lint": "biome check"
 	},
 	"dependencies": {
@@ -57,7 +56,6 @@
 		"react-dom": "19.1.1",
 		"react-dropzone": "^14.3.8",
 		"react-hotkeys-hook": "^5.1.0",
-		"react-scan": "^0.4.3",
 		"tailwind-variants": "3.1.1",
 		"tailwindcss": "4.1.13",
 		"use-sound": "^5.0.0",
@@ -86,6 +84,7 @@
 		"@types/react-dom": "19.1.9",
 		"@vitejs/plugin-react-swc": "^4.0.1",
 		"cookie": "^1.0.2",
+		"sonda": "^0.9.0",
 		"typescript": "5.9.2",
 		"vite": "^7.1.5",
 		"vite-tsconfig-paths": "^5.1.4"
