--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -56,6 +56,7 @@
 		"react-dom": "19.1.1",
 		"react-dropzone": "^14.3.8",
 		"react-hotkeys-hook": "^5.1.0",
+		"react-markdown": "^10.1.0",
 		"tailwind-variants": "3.1.1",
 		"tailwindcss": "4.1.13",
 		"use-sound": "^5.0.0",
