--- a/packages/impoexpo-shared/package.json
+++ b/packages/impoexpo-shared/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
+		"luxon-parser": "^1.0.3",
 		"moize": "^6.1.6",
 		"valibot": "^1.1.0"
 	},
