type conversion improvements

--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -33,6 +33,7 @@
 		"clone": "^2.1.2",
 		"compression": "^1.8.0",
 		"cors": "^2.8.5",
+		"deep-copy-ts": "^0.5.4",
 		"dotenv": "^16.5.0",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
@@ -44,7 +45,7 @@
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
 		"migration-files": "^0.4.3",
-		"multer": "1.4.5-lts.2",
+		"multer": "2.0.2",
 		"pino": "^9.6.0",
 		"pino-http": "^10.4.0",
 		"pino-http-print": "^3.1.0",
