--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -73,8 +73,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
 		"@iconify/react": "^6.0.2",
+		"@lingui/babel-plugin-lingui-macro": "^5.5.1",
 		"@lingui/cli": "^5.5.0",
-		"@lingui/swc-plugin": "^5.6.1",
 		"@lingui/vite-plugin": "^5.5.0",
 		"@react-types/shared": "3.32.0",
 		"@types/cookie-parser": "^1.4.9",
@@ -86,7 +86,8 @@
 		"@types/node": "24.5.0",
 		"@types/react": "19.1.13",
 		"@types/react-dom": "19.1.9",
-		"@vitejs/plugin-react-swc": "^4.0.1",
+		"@vitejs/plugin-react": "^5.1.0",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"cookie": "^1.0.2",
 		"sonda": "^0.9.0",
 		"typescript": "5.9.2",
