--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -40,6 +40,7 @@
 		"express-validator": "^7.2.1",
 		"extra-promise": "^7.0.0",
 		"fast-xml-parser": "^5.2.3",
+		"fast-equals": "^5.2.2",
 		"glob": "^11.0.2",
 		"googleapis": "^146.0.0",
 		"iso-639-1": "^3.1.5",
