--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@impoexpo/client",
 	"private": true,
-	"version": "1.1.0-beta",
+	"version": "1.2.0-beta",
 	"type": "module",
 	"scripts": {
 		"dev": "vike dev --port 5173",
@@ -50,6 +50,7 @@
 		"immer": "^10.1.3",
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.7.2",
+		"luxon-parser": "^1.0.3",
 		"motion": "^12.23.13",
 		"pretty-bytes": "^7.0.1",
 		"react": "19.1.1",
