--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@impoexpo/server",
-	"version": "1.1.0-beta",
+	"version": "1.2.0-beta",
 	"private": true,
 	"main": "dist/index.js",
 	"type": "module",
@@ -39,12 +39,13 @@
 		"express-rate-limit": "^7.5.0",
 		"express-validator": "^7.2.1",
 		"extra-promise": "^7.0.0",
-		"fast-xml-parser": "^5.2.3",
 		"fast-equals": "^5.2.2",
+		"fast-xml-parser": "^5.2.3",
 		"glob": "^11.0.2",
 		"googleapis": "^146.0.0",
 		"iso-639-1": "^3.1.5",
 		"luxon": "^3.6.1",
+		"luxon-parser": "^1.0.3",
 		"migration-files": "^0.4.3",
 		"multer": "2.0.2",
 		"pino": "^9.6.0",
