--- a/packages/impoexpo-shared/biome.json
+++ b/packages/impoexpo-shared/biome.json
@@ -1,34 +1,4 @@
 {
-	"root": false,
 	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
-	"vcs": {
-		"enabled": false,
-		"clientKind": "git",
-		"useIgnoreFile": true
-	},
-	"files": {
-		"ignoreUnknown": false,
-		"includes": ["**"]
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab"
-	},
-	"assist": { "actions": { "source": { "organizeImports": "on" } } },
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"suspicious": {
-				"noArrayIndexKey": "warn"
-			},
-			"correctness": {
-				"useExhaustiveDependencies": "info"
-			}
-		}
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double"
-		}
-	}
+	"extends": "//"
 }
