fix crash when output filename has non-ascii symbols

--- a/packages/impoexpo-server/package.json
+++ b/packages/impoexpo-server/package.json
@@ -13,6 +13,7 @@
 		"@types/apicache": "^1.6.7",
 		"@types/clone": "^2.1.4",
 		"@types/compression": "^1.7.5",
+		"@types/content-disposition": "^0.5.9",
 		"@types/cors": "^2.8.18",
 		"@types/express": "5.0.0",
 		"@types/luxon": "^3.6.2",
@@ -32,6 +33,7 @@
 		"better-sse": "^0.14.1",
 		"clone": "^2.1.2",
 		"compression": "^1.8.0",
+		"content-disposition": "^0.5.4",
 		"cors": "^2.8.5",
 		"deep-copy-ts": "^0.5.4",
 		"dotenv": "^16.5.0",
